# NotebookRefactorAgent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
eval/: suite.yaml
eval/cases/case1/: input.ipynb
eval/cases/case2/: input.ipynb
eval/cases/case3/: input.ipynb
eval/cases/case4/: input.ipynb
examples/: COMP448_HW2.ipynb  example-bs4.ipynb  messy_notebook.ipynb
out_pkg/src_pkg/: module.py
out_pkg/tests/: test_module.py
out_pkg_llm/.reports/: black.txt  exec.txt  index.txt  mypy.txt  pytest.txt  report.json  ruff.txt
out_pkg_llm/src_pkg/: main.py  module.py
out_pkg_llm/tests/: test_module.py
src/notebook_refactor_agent/: cli.py  plan.py
src/notebook_refactor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notebook_refactor_agent/agent/: graph.py  schemas.py  state.py
src/notebook_refactor_agent/agent/nodes/: critic.py  planner.py  planner_llm.py  refactor.py  refactor_llm.py  test_writer_llm.py  writer_node.py
src/notebook_refactor_agent/eval/: run.py
src/notebook_refactor_agent/llm/: cache.py  factory.py  fake.py  groq_client.py  interfaces.py  json_utils.py
src/notebook_refactor_agent/prompts/: critic.md  planner.md  refactor.md  test_writer.md
src/notebook_refactor_agent/tools/: nb_inspector.py  quality.py
tests/: test_critic_node.py  test_planner_node.py  test_refactor_node.py  test_smoke.py
