[project]
name = "notebook-refactor-agent"
version = "0.1.0"
description = "Turn messy notebooks into production-grade Python packages with agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "langgraph>=0.0.50",
    "langchain>=0.2.0",
    "openai>=1.0.0",          # swap to your LLM SDK/provider
    "tenacity",
    "pydantic>=2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "nbformat",
    "jupytext",
    "libcst",
    "astroid",
    "typer[all]",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "black",
    "isort",
    "mypy",
    "radon",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]   # line length handled by black

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "notebook_refactor_agent.agent.nodes.*"
disable_error_code = ["no-untyped-call"]
