[project]
name = "notebook-refactor-agent"
version = "0.1.0"
description = "Turn messy notebooks into production-grade Python packages with agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "langgraph>=0.0.50",
    "tenacity",
    "pydantic>=2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "nbformat",
    "jupytext",
    "libcst",
    "astroid",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "black",
    "isort",
    "mypy",
    "radon",
    "pre-commit",
    "types-PyYAML",
]
agents = [
    "openai>=1.0.0",
    "langchain>=0.2.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "notebook_refactor_agent.agent.nodes.*"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "notebook_refactor_agent.tools.nb_inspector"
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["eval_runs", "out_pkg", ".venv", "build", "dist"]
