[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-refactor-agent"
version = "0.1.0"
description = "Turn messy notebooks into production-grade Python packages with agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.0.50",
    "tenacity",
    "pydantic>=2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "nbformat",
    "jupytext",
    "libcst",
    "astroid",
    "typer",
    "pyyaml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/polatbulut/NotebookRefactorAgent"
Issues = "https://github.com/polatbulut/NotebookRefactorAgent/issues"

[project.scripts]
nra = "notebook_refactor_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "black",
    "isort",
    "mypy",
    "radon",
    "pre-commit",
    "types-PyYAML",
]
agents = [
    "groq>=0.9.0",
    "requests>=2.31.0",
    "langchain>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["notebook_refactor_agent"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "notebook_refactor_agent.agent.nodes.*"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "notebook_refactor_agent.tools.nb_inspector"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["misc", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["eval_runs", "out_pkg", ".venv", "build", "dist"]